--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
-baseURL: https://hugo-toha.github.io
+baseURL: https://MrPenguin07.github.io
 
 languageCode: en-us
-title: "John's Blog"
+title: "Professional Penguin"
 
 # Use Hugo modules to add theme
 module:
@@ -23,9 +23,9 @@ languages:
   en:
     languageName: English
     weight: 1
-  bn:
-    languageName: বাংলা
-    weight: 3
+  #bn:
+  #  languageName: বাংলা
+  #  weight: 3
 
 # Force a locale to be use, really useful to develop the application ! Should be commented in production, the "weight" should rocks.
 # DefaultContentLanguage: bn
@@ -64,7 +64,7 @@ params:
     favicon: /images/site/favicon.png
 
   # GitHub repo of your site
-  gitRepo: https://github.com/hugo-toha/hugo-toha.github.io
+  gitRepo: https://github.com/MrPenguin07/MrPenguin07.github.io
   # Default branch of your Git repo
   gitBranch: main
 
@@ -97,11 +97,11 @@ params:
       enable: true
       # Share post on different social media
       shareButtons:
-        facebook: true
+        facebook: false
         twitter: true
         linkedin: true
         reddit: true
-        whatsapp: true
+        whatsapp: false
         email: true
         # tumblr: true
         # pocket: true
@@ -147,18 +147,19 @@ params:
         #   hideDeleted: false
 
     # Enable Analytics
+    
     analytics:
       enabled: true
       services:
         # Google Analytics
-        google:
-          id: G-H4LBG7NDFZ
+        #google:
+        #  id: G-H4LBG7NDFZ
         # # CounterDev
         # counterDev:
         #   id: <your counterdev id>
         # # GoatCounter
-        # goatCounter:
-        #   code: <your goat counter code>
+        goatCounter:
+          code: mr-penguin
         # # Matomo / Piwik
         # matomo:
         #   instance: matomo.example.com
@@ -169,7 +170,7 @@ params:
       enable: false
       services:
         kofi:
-          user: hossainemruz
+          user: 
           text: Tip Me
           textColor: '#f9fafc'
           backgroundColor: '#248aaa'
@@ -211,7 +212,7 @@ params:
 
     # Enable this to create mathematic expressions using `$$` blocks
     math:
-      enable: true
+      enable: false
       services:
         # https://katex.org/docs/autorender.html#api for more configurations
         katex:
@@ -285,7 +286,7 @@ params:
     # Show/hide newsletter section in the footer. Default is "true".
     # Currently, it supports "mailchimp".
     newsletter:
-      enable: true
+      enable: false
       provider: mailchimp
       mailchimpURL: https://github.us1.list-manage.com/subscribe/post?u=19de52a4603135aae97163fd8&amp;id=094a24c76e
 
