--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://MrPenguin07.github.io
+baseURL: https://mrpenguin07.github.io
 
 languageCode: en-us
 title: "Professional Penguin"
