--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -14,10 +14,9 @@ contactInfo:
 summary:
   - I'm something of a tech Swiss army knife
   - I'm a Gentoo masochist 
-  - Capable working with everything;
-  - -from Linux, Docker and Nix deployments,
-  - -to networking, security and cloud, 
-  - -to web cad & graphic design,
-  - -and building efficient custom kernels.
-  - Been known to squash bugs (of the written kind)  
-  - Most of all I enjoy being a part of technologies evolve.
+  - I take on any challenge;
+  - -Linux, Docker and Nix deployments,
+  - -to Networking, Security and Cloud, 
+  - -to Web CAD & Graphic Design,
+  - -and building efficient custom Kernels. 
+  - I love being part of tech evolution.
