--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -11,39 +11,44 @@ section:
 # Your Skills.
 # Give a summary of you each skill in the summary section.
 skills:
+- name: Linux
+  logo: /images/sections/skills/linux.png
+  summary: "Using Gentoo Linux as my main operating system since ~2004, QubesOS as secondary. Obsessed with security and efficiency. Proficient in writing bash/shell scripts."
+
 - name: Kubernetes
   logo: /images/sections/skills/kubernetes.png
   summary: "Capable of deploying, managing application on Kubernetes. Experienced in writing Kubernetes controllers for CRDs."
   url: "https://kubernetes.io/"
 
-- name: Go Development
-  logo: /images/sections/skills/go.png
-  summary: "Using as the main language for professional development. Capable of writing scalable, testable, and maintainable program."
-  url: "https://golang.org/"
+- name: Python Development
+  logo: /images/sections/skills/python.png
+  summary: "Python scripter, basic capabilities in coding for diverse tasks in automation, data manipulation, and web scraping."
+  url: "https://www.python.org/"
 
 - name: Cloud Computing
   logo: /images/sections/skills/cloud.png
-  summary: "Worked with most of the major clouds such as GCP, AWS, Azure etc."
+  summary: "Worked with various providers incl. AWS, Azure, Oracle to deploy Applications, Serverless CMS, CDN, Backup/Storage services etc."
 
 - name: Docker
   logo: /images/sections/skills/docker.svg
-  summary: "Write most of the programs as dockerized container. Experienced with multi-stage, multi-arch build process."
+  summary: "Experienced in leveraging Docker images to streamline deployment, enhance scalability and ensure consistent environments."
   url: "https://www.docker.com/"
 
-- name: Prometheus
-  logo: /images/sections/skills/prometheus.png
-  summary: "Capable of setup, configure Prometheus metrics. Experienced with PromQL, AlertManager. Also, experienced with writing metric exporters."
+- name: Network Administration 
+  logo: /images/sections/skills/cisco.png
+  summary: "Proficient in Cisco networking, configuring routers and switches, optimizing network performance, and ensuring secure/reliable communication. Strong foundation in network protocols and troubleshooting."
   url: "https://prometheus.io/"
 
-- name: Linux
-  logo: /images/sections/skills/linux.png
-  summary: "Using as the main operating system. Capable of writing bash/shell scripts."
+- name: Graphic & Web Design
+  logo: /images/sections/skills/design.png
+  summary: "Since my first hand-written html website in ~2000, I've created various CMS sites for hobby and personal business."
+  url: "https://prometheus.io/"
 
 - name: Git
   logo: /images/sections/skills/git.png
-  summary: "Experienced with git-based development. Mostly, use Github. Also, have experience in working with GitLab."
+  summary: "Experienced with git-based development and version control on GitHub and GitLab."
   url: "https://git-scm.com/"
 
-- name: C++
-  logo: /images/sections/skills/c++.png
-  summary: "Know basic C/C++ programming. Used for contest programming and problem solving."
+- name: Virtualization
+  logo: /images/sections/skills/virtual.png
+  summary: "Competent with Type 1 hypervisors Proxmox/ESXi environments, adept at optimizing resource usage, high availability and infrastructure deployments."
