--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -12,8 +12,8 @@ section:
 buttons:
 - name: All
   filter: "all"
-- name: Professional
-  filter: "professional"
+#- name: Professional
+  #filter: "professional"
 - name: Academic
   filter: "academic"
 - name: Hobby
@@ -27,7 +27,7 @@ projects:
   timeline: "2022 - Present"
   repo: https://github.com/cisco # If your project is a public repo on GitHub, then provide this link. it will show star count.
   #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
-  summary: Currently preparing to take the CCNA exam.
+  summary: Actively working through Cisco NetAcad, preparing to take the CCNA exam.
   tags: ["academic", "networking", "ccna"]
 
 - name: GrapheneOS
@@ -40,6 +40,7 @@ projects:
   tags: ["hobby", "security", "privacy"]
 
 - name: Kernel Development
+  logo: /images/sections/projects/kernel.png
   role: User, Bug Reporter
   timeline: "2004 - Present"
   repo: https://github.com/torvalds/linux
@@ -76,7 +77,7 @@ projects:
   role: Contributor
   timeline: "2022 - Present"
   repo: https://github.com/upscayl/upscayl
-  summary: The best way to write secure and reliable applications. Write nothing; deploy nowhere. That which was never deployed cannot be broken.
+  summary: Utilizing AI esrgan models, old low quality images can be brought back to life in HD and with a stunning improvement in quality. 
   tags: ["hobby", "ai", "image upscaler", "esrgan"]
 
 - name: SwayWM 
