--- a/config.yaml
+++ b/config.yaml
@@ -80,7 +80,7 @@ params:
       enable: true
       services:
         darkreader:
-          defaultColorScheme: system # options are 'system', 'dark', 'light'
+          defaultColorScheme: light # options are 'system', 'dark', 'light'
           fixes:
             invert: ['img[src$=".svg"]'] # inverts svg colors.
           theme:
@@ -98,9 +98,9 @@ params:
       # Share post on different social media
       shareButtons:
         facebook: false
-        twitter: true
+        twitter: false
         linkedin: true
-        reddit: true
+        reddit: false
         whatsapp: false
         email: true
         # tumblr: true
@@ -110,7 +110,7 @@ params:
 
     # Enable & configure "Notes" features
     notes:
-      enable: true
+      enable: false
 
     # Enable comment feature. There, should be only one of them.
     comment:
