update bg, override css

--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -42,7 +42,7 @@ experiences:
     name: Optimization & Hardening
     url: "https://kernel.org/"
     location: Hobbyist
-    overview: OCD in optimizing and securing the Linux kernel and systems through personal initiatives and projects.
+    overview: Dedicated to (OCD about) optimizing and securing the Linux kernel and systems through extensive educational exploration and perseverence.
   positions:
   - designation: Linux Kernel Enthusiast
     start: "2002"
