--- a/config.yaml
+++ b/config.yaml
@@ -54,8 +54,8 @@ enableEmoji: true
 # Site parameters
 params:
   # Background image of the landing page
-  background: /images/site/background.png
-
+  #background: /images/site/background.png
+  background: /images/site/fullbg1.jpg
   # Provide logos for your site. The inverted logo will be used in the initial
   # transparent navbar and the main logo will be used in the non-transparent navbar.
   logo:
