--- a/config.yaml
+++ b/config.yaml
@@ -19,6 +19,7 @@ module:
 
 # Manage languages
 # For any more details, you can check the official documentation: https://gohugo.io/content-management/multilingual/
+defaultContentLanguage: en
 languages:
   en:
     languageName: English
