--- a/data/en/sections/education.yaml
+++ b/data/en/sections/education.yaml
@@ -12,7 +12,7 @@ section:
 degrees:
 - name: Adv. Diploma Networking & Cloud
   icon: fa-graduation-cap
-  timeframe: 2023-2024
+  timeframe: 2023
   institution:
     name: TAFE Queensland
     url: "https://tafeqld.edu.au"
