--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -13,9 +13,9 @@ contactInfo:
 # some summary about what you do
 summary:
   - I'm something of a tech Swiss army knife
-  - I'm a Gentoo masochist 
+  - Unashamedly a Gentoo masochist 
   - I take on any challenge
-  - I love being part of tech evolution.
+  - I love being on the forefront of tech.
  # - -Linux, Docker and Nix deployments,
  # - -to Networking, Security and Cloud, 
  # - -to Web CAD & Graphic Design,
