--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -19,7 +19,7 @@ company:
 # resume: "files/resume.pdf"
 
 # a summary about you
-summary: 'I am a FOSS & linux enthusiast - a master tinkerer. I compile, deploy, script, encrypt, and squash bugs. Kernel and security hardening float my boat. In the midst of a career change to I.T - what I was born to do - looking for opportunities!'
+summary: 'I am a FOSS & linux enthusiast - a master tinkerer. I compile, deploy, script, encrypt, and squash bugs. Kernel and security hardening float my boat. \n In the midst of a career change to I.T - what I was born to do. Currently looking for opportunities! \n Feel free to contact me via email or github as below.'
 
 # your social links
 # give as many as you want. use font-awesome for the icons.
