upd skills, experiences

--- a/data/en/sections/education.yaml
+++ b/data/en/sections/education.yaml
@@ -10,7 +10,7 @@ section:
   # hideTitle: true
 
 degrees:
-- name: Adv. Diploma Networking & Cloud
+- name: Diploma Adv. Networking & Cloud
   icon: fa-graduation-cap
   timeframe: 2023
   institution:
